--- a/HomeAcademia_at.css
+++ b/HomeAcademia_at.css
@@ -1,3 +1,7 @@
+/* Estilização da página Inicial */
+
+  /*------------- Conteúdo inicial - Head -------------- */ 
+
 header {
 	background: #000000;
 	padding: 20px 0; 
@@ -33,39 +37,41 @@ nav a {
 
  nav a:hover {
  	color: rgb(196,255,14); 
+ } 
+
+ /*------------- Conteúdo central (Planos)-------------- */ 
+ body{
+  padding: 0;
+  margin: 0;
+
  }
 
  .planos {
- 	width: 960px; 
-	margin: 0 auto;
- }
+ 	width: 100%;
+  height: 100vh;
+  display: inline-block;
+  height: 130vh;
+  justify-content:center;
+  align-items: center;
+  background: linear-gradient(120deg, #c4ff0e , #0bbc6e, #c4ff0e);
+ } 
 
  .planos ol { 
  	display: inline-block;
  	text-align: center;
- 	width: 45%;
+ 	width: 30%;
  	vertical-align: top;
- 	padding: 50px 0; 
+ 	padding: 60px 0; 
  	margin: 0 1.5%;
  	box-sizing: border-box; 
- 	border-color: #000000; 
- 	border-width:4px;
- 	border-style: solid;
- 	margin-top: 100px;
- 	border-radius: 10px;
+ 	border: unset; 
+  background: #ffffff; 
+  margin-left: 150px; 
+ 	margin-top: 120px;
+ 	border-radius: 8px; 
   } 
 
-  .planos ol:hover {
-  	border-color: rgb(196,255,14);
-  } 
 
-  .planos ol:hover h2 {
-  	font-size: 27px;
-  } 
-
-  .planos ol:hover li {
-  	font-size: 27px;
-  } 
 
   .paragrafo h2 {
   	font-size: 20px;
@@ -75,6 +81,13 @@ nav a {
 
   } 
 
+  .incluso_input-border {
+    height: 2px;
+    width: 80%;
+    align-items: center;
+    background-color: #000000;
+  }
+
   .paragrafo li {
   	font-size: 20px; 
   	margin: 10px 0 0;
@@ -83,14 +96,21 @@ nav a {
   footer {
   	text-align: center; 
   	background: url("fundofinal.jpg"); 
-  	color: #FFFFFF;
+  	color: #f5f5f5;
   	font-weight: bold; 
-  	margin-top: 100px;
+  	margin-top: 0;
   } 
 
   footer p { 
   	text-align: center; 
   	margin-bottom: 20px;
-  }
+    font-size: 15px;
+  } 
+
+
+  
+
+  
+
 
   
